# durable-wordle

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  justfile  plan.md  pyproject.toml  spec.md  temporal.toml  todo.md
.ai-sessions/: lessons.md  session-20260403-1235-implementation-plan.md  session-20260403-1259-project-scaffolding.md  session-20260404-1707-plan-rebuild.md  session-20260404-2044-step1-scaffolding.md  session-20260404-2134-step2-models-logic.md  session-20260405-1340-step3-word-lists.md  session-20260406-1311-workflow-refactoring.md  session-20260406-1331-step4-workflow.md  session-20260406-1507-step5-api.md  session-20260406-1603-step5-step6.md  session-20260406-1631-steps5-7-complete.md  session-20260406-1639-docker-readme.md  session-20260406-1811-ui-polish-features.md  session-20260407-0947-code-simplification.md
src/demo_wordle/: activities.py  api.py  game_logic.py  models.py  word_lists.py  worker.py  workflows.py
src/durable_wordle/: activities.py  api.py  config.py  game_logic.py  models.py  word_lists.py  worker.py  workflow.py  workflows.py
templates/: _board_partial.html  index.html
tests/: conftest.py  test_activities.py  test_api.py  test_config.py  test_game_logic.py  test_models.py  test_word_lists.py  test_workflow.py  test_workflows.py
